--- a/views/phraseanet-plugin-expose/prod/expose.html.twig
+++ b/views/phraseanet-plugin-expose/prod/expose.html.twig
@@ -97,7 +97,7 @@
             },
             success: function (data) {
                 if (data.success) {
-                    $("#pub-success").removeClass("hidden").text(data.message + " " + data.url);
+                    $("#pub-success").removeClass("hidden").html(data.message + ": " + data.link);
                 } else {
                     $("#pub-error").removeClass("hidden").text(data.message);
                 }
