--- a/views/phraseanet-plugin-expose/prod/expose.html.twig
+++ b/views/phraseanet-plugin-expose/prod/expose.html.twig
@@ -1,71 +1,94 @@
 <div>
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" id="exposeTabs">
-        <li role="presentation" class="active"><a href="#pubCreate" aria-controls="about" role="tab" data-toggle="tab">Publication create</a></li>
-        <li class="{{ divId }}" role="presentation"><a href="#pubList" aria-controls="pub-list" role="tab" data-toggle="tab" data-url="/expose/list-publication">Publication list</a></li>
+        <li role="presentation" class="active"><a href="#pubCreate" aria-controls="about" role="tab" data-toggle="tab">Publication
+                create</a></li>
+        <li class="{{ divId }}" role="presentation"><a href="#pubList" aria-controls="pub-list" role="tab"
+                                                       data-toggle="tab" data-url="/expose/list-publication">Publication
+                list</a></li>
     </ul>
-
     <!-- Tab panes -->
     <div class="tab-content">
-
         <div role="tabpanel" class="tab-pane fade in active" id="pubCreate">
             <div id='expose-plugin'>
-                <div style="overflow: scroll;">
-                    <button type="button" class="btn btn-success" id="create-publication">
-                        Create publication {% if lst %} from {{ lst|split(';')|length }} selected {% endif %}
-                    </button>
-                    <br/>
-                    <textarea class="publication-data" name="publication-data" rows="10" cols="50">
-{
-    "title": "the title",
-    "enabled": true,
-    "layout": "gallery",
-    "publiclyListed": true,
-    "slug": "",
-    "securityMethod": "",
-    "securityOptions": {}
-}
-                    </textarea>
-                    <span id="pub-error" class="hidden alert alert-error"></span>
-                    <span id="pub-success" class="hidden alert alert-success"></span>
+                <div class="publication-block">
+                    <form name="publication-data" id="publication-data-form">
+                        <div class="left-publication inner-publication">
+                            <div class="ui-widget">
+                                <label>title: </label>
+                                <input type="text" value="" name="title"/>
+                            </div>
+                            <div class="ui-widget">
+                                <label>enabled: </label>
+                                <select id="enabled-combobox" name="enabled">
+                                    <option value="true">True</option>
+                                    <option value="false">False</option>
+                                </select>
+                            </div>
+                            <div class="ui-widget">
+                                <label>layout: </label>
+                                <input type="text" value="" name="layout"/>
+                            </div>
+                        </div>
+                        <div class="right-publication inner-publication">
+                            <div class="ui-widget">
+                                <label>publiclyListed: </label>
+                                <select id="publiclyListed-combobox" name="publiclyListed">
+                                    <option value="true">True</option>
+                                    <option value="false">False</option>
+                                </select>
+                            </div>
+
+                            <div class="ui-widget">
+                                <label>slug: </label>
+                                <input type="text" value="" name="slug"/>
+                            </div>
+                            <div class="ui-widget">
+                                <label>securityMethod: </label>
+                                <input type="text" value="" name="securityMethod"/>
+                            </div>
+                        </div>
+                        <div class="ui-widget">
+                            <label>securityOptions: </label>
+                            <textarea name="securityMethod">{}</textarea>
+                        </div>
+                    </form>
+                    <div class="publication-btn-container">
+                        <button type="button" class="btn btn-success" id="create-publication">
+                            Create publication {% if lst %} from {{ lst|split(';')|length }} selected {% endif %}
+                        </button>
+                        <p><span id="pub-error" class="hidden alert alert-error"></span></p>
+                        <p><span id="pub-success" class="hidden alert alert-success"></span></p>
+                    </div>
                 </div>
             </div>
         </div>
-
         <div role="tabpanel" class="tab-pane fade" id="pubList">
         </div>
     </div>
 </div>
-
-
 <script type="text/javascript">
     // tab javascript
     var contentsDownloaded = {};
-    var remoteContent = function(url) {
+    var remoteContent = function (url) {
         return $.get(url);
     };
-
     var tabs = $('#exposeTabs a[data-toggle="tab"]');
-
-    tabs.on('click', function(){
+    tabs.on('click', function () {
         $(this).tab('show');
     });
-
     $('.nav-tabs a').on('show.bs.tab', function (e) {
         if (e.target.hash != '#pubCreate' && contentsDownloaded[e.target.hash] === undefined) {
             $(e.target.hash).empty().html('<img src="/assets/common/images/icons/main-loader.gif" alt="loading"/>');
         }
     });
-
     $('.nav-tabs').on('shown.bs.tab', function (e) {
-
         if (e.target.hash != '#pubCreate' && contentsDownloaded[e.target.hash] === undefined) {
             var targetDiv = $(e.target.hash);
-
-            remoteContent($(e.target).attr('data-url')).then(function(response) {
+            remoteContent($(e.target).attr('data-url')).then(function (response) {
                 targetDiv.empty().html(response);
                 contentsDownloaded[e.target.hash] = true;
-            }, function(error) {
+            }, function (error) {
                 console.log(error);
                 targetDiv.empty().html('<i class="icon-fire">Unable to load content!</i>');
             });
@@ -74,37 +97,59 @@
 
     // end display tab
 
+    /**convert Object data  to Json**/
+    function booleanizeObject(obj) {
+        var keys = Object.keys(obj);
+        keys.forEach(function (key) {
+            var value = obj[key];
+            if (typeof value === 'string') {
+                var lvalue = value.toLowerCase();
+                if (lvalue === 'true') {
+                    obj[key] = true;
+                } else if (lvalue === 'false') {
+                    obj[key] = false;
+                }
+            } else if (typeof value === 'object') {
+                booleanizeObject(obj[key]);
+            }
+        });
+    }
+
     $(document).on('click', '#create-publication', function (e) {
         e.preventDefault();
-        var publicationData = $('.publication-data');
-
         try {
             $("#pub-error").addClass("hidden");
-            JSON.parse(publicationData.val());
+            var allData = $('#publication-data-form').serializeArray();
+
+            var dataValue = allData.reduce((acc, it) => {
+                acc[it.name] = it.value;
+                return acc;
+            }, {});
+            booleanizeObject(dataValue);
+            console.log(JSON.stringify(dataValue));
+
         } catch (err) {
             $("#pub-error").removeClass("hidden").text(err.message);
-
             return;
         }
-
         $.ajax({
             type: "POST",
             url: "../expose/create-publication/",
             dataType: 'json',
             data: {
                 lst: {{ lst|json_encode|raw }},
-                publicationData:  publicationData.val()
+                publicationData: JSON.stringify(dataValue)
             },
             success: function (data) {
                 if (data.success) {
                     $("#pub-success").removeClass("hidden").html(data.message + ": " + data.link);
+                    document.getElementById("publication-data-form").reset();
                 } else {
                     $("#pub-error").removeClass("hidden").text(data.message);
                 }
             }
         });
     });
-
     $(document).on('keyup', '.publication-data', function (e) {
         try {
             $("#pub-success").addClass("hidden");
@@ -114,5 +159,44 @@
             $("#pub-error").removeClass("hidden").text(err.message);
         }
     });
-
 </script>
+<style type="text/css">
+    .publication-block {
+        padding: 12px 0;
+        display: inline-block;
+        overflow-y: auto;
+    }
+    .publication-block label {
+        float: left;
+        width: 100px;
+        font-size: 14px;
+        text-align: right;
+        line-height: 35px;
+        display: inline-block;
+        vertical-align: middle;
+    }
+    .publication-block .ui-widget {
+        margin: 0 0 16px 0;
+        display: inline-block;
+    }
+    .publication-block  input[type="text"] {
+        margin: 2px;
+    }
+    .inner-publication {
+        width: 50%;
+        float: left;
+    }
+    .publication-btn-container {
+        display: inline-block;
+        width: 100%;
+        text-align: center;
+        margin-top: 30px;
+    }
+    #create-publication {
+        border-radius: 16px;
+        padding: 7px 18px;
+        background: #2196f3;
+        color: #fff;
+        margin-bottom: 16px;
+    }
+</style>
